fixed wallpaper flicker by loading image lol

--- a/style.css/style.css
+++ b/style.css/style.css
@@ -6,7 +6,7 @@ body {
   height: 100%;
   width: 100%;
   /* background-color: #5e5e5e; */
-  background: url('../images/wallpaper_15.jpg') no-repeat center center fixed; 
+  background: url('../images/wallpaper_8.jpg') no-repeat center center fixed; /* Best: 6 8 11-16 21 28 */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
